add images in category and searh products by id_category
