# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\Api\CategoryController;
 use App\Http\Controllers\Api\ProductController;
 use App\Http\Controllers\Api\UserController;
 use App\Http\Controllers\Auth\AuthController;
@@ -24,8 +25,12 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 Route::post('login', [AuthController::class, 'login'])->name('login');
 
 //    PRODUCT
-Route::resource('product', ProductController::class)->only(['index', 'show', 'store', 'update', 'destroy'])
-    ->names(['index' => 'product.index', 'store' => 'product.store', 'show' => 'product.show', 'update' => 'product.update', 'destroy' => 'product.destroy']);
+Route::resource('product', ProductController::class)->only(['index', 'show'])
+    ->names(['index' => 'product.index', 'show' => 'product.show']);
+
+//   CATEGORY
+Route::resource('category', CategoryController::class)->only(['index', 'show'])
+    ->names(['index' => 'category.index', 'show' => 'category.show']);
 
 Route::group(["middleware" => ["auth:sanctum"]], function () {
 
@@ -33,5 +38,13 @@ Route::group(["middleware" => ["auth:sanctum"]], function () {
     Route::get('authenticate', [AuthController::class, 'authenticate']);
 
     Route::post('user', [UserController::class, 'store']);
+
+//    PRODUCT
+    Route::resource('product', ProductController::class)->only(['store', 'update', 'destroy'])
+        ->names(['store' => 'product.store', 'update' => 'product.update', 'destroy' => 'product.destroy']);
+
+    //    PRODUCT
+    Route::resource('category', CategoryController::class)->only(['store', 'update', 'destroy'])
+        ->names(['store' => 'category.store', 'update' => 'category.update', 'destroy' => 'category.destroy']);
 
 });
